--- a/animation/keyframes.html
+++ b/animation/keyframes.html
@@ -73,6 +73,7 @@
             path + 'posz' + format, path + 'negz' + format,
         ])
 
+        // DRACO可以压缩gltf  现在用要先它解压缩
         var dracoLoader = new DRACOLoader()
         dracoLoader.setDecoderPath('/js/libs/draco/gltf/')
 
