--- a/clipping/intersection.html
+++ b/clipping/intersection.html
@@ -69,8 +69,8 @@
 
                     color: new THREE.Color().setHSL( Math.random(), 0.5, 0.5 ),
                     side: THREE.DoubleSide,
-                    clippingPlanes: clipPlanes,
-                    clipIntersection: params.clipIntersection
+                    clippingPlanes: clipPlanes,   // 裁切面
+                    clipIntersection: params.clipIntersection  // 控制裁切情况
 
                 })
 
